infrastructure/netpols/egress/egress-internet.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-internet
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/egress-internet: "true"
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 100.64.0.0/10
